Index virtual threads test